--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="app.js" type="text/javascript"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Rigo with Vanilla.js</title>
@@ -13,9 +14,15 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
+    
     <div class="container-fluid text-center">
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
+      <p id="excuse"></p>
+    </div>
+    <div>
+    
+    </div> 
       <p class="alert alert-warning mt-4">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
         an error
